[package]
name = "toposort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "test_marking"
path = "src/toposort/marking.rs"

[[test]]
name = "test_predecessors"
path = "src/toposort/predecessors.rs"

[[test]]
name = "test_visit"
path = "src/toposort/visit.rs"

